# fastapi_demo

./: .gitignore  .pre-commit-config.yaml  MANIFEST.IN  README.md  data.csv  db.py  main.py  model.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
fastapi_demo/: db.py  main.py  model.py
src/: db.py  main.py  model.py
tests/: conftest.py  test_api.py
