[project]
name = "fastapi-demo"
version = "1.0.0"
description = "A basic web api with hot sauce sample data ðŸŒ¶ï¸"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

dependencies = [
    "fastapi",
    "pydantic"
]

[project.optional-dependencies]
dev = [
  "uvicorn"
]
test = [
    "pytest"
]

